--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <script type="text/javascript" src="skyroads.js"></script>
 
 <body onload="main();">
+	<div style="color:#0000FF" id="status">
+    <h4>May the Force be With you</h4>
+	</div>
+
 	<canvas id="myImageCanvas" width="512" height="512"></canvas>
 	<canvas id="myWebGLCanvas" width="512" height="512"></canvas>
 	<canvas id="text" width="512" height="512"></canvas>
