--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<div style="color:#0000FF" id="status">
     <h4>May the Force be With you</h4>
 	</div>
+	<div style="color:#FF0000" id="mission">
+    <h4>COMPLETE FIVE LEVELS AND DESTROY THE DEATH STAR BEFORE YOU EMPTY YOUR FUEL OR OXYGEN</h4>
+	</div>
 
 	<canvas id="myImageCanvas" width="512" height="512"></canvas>
 	<canvas id="myWebGLCanvas" width="512" height="512"></canvas>
